--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -27,6 +27,7 @@
     <script src="/Content/lib/angular/angular-route.js"></script>
     <script src="/Content/lib/angular/angular-animate.js"></script>
    
+    <script src="//cdn.jsdelivr.net/satellizer/0.9.2/satellizer.min.js"></script>
 
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
