--- a/iWork.Web.UI/Template/Default/Layout/login.html
+++ b/iWork.Web.UI/Template/Default/Layout/login.html
@@ -1,27 +1,62 @@
 ﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" ng-app="iWork">
+<html xmlns="http://www.w3.org/1999/xhtml" ng-app="MyApp">
 <head>
     <meta charset="utf-8">
     <title>Title</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
     <link rel="stylesheet" href="/Content/lib/bootstrap/css/bootstrap.css" media="screen">
     <link rel="stylesheet" href="/Content/css/style.css" media="screen">
     <link rel="stylesheet" href="/Content/css/login.css" media="screen">
-
+    <!-- JS Libraries -->
     <script src="/Content/lib/jquery/jquery-2.1.1.min.js"></script>
+    <script src="/Content/js/common.js"></script>
     <script src="/Content/lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="/Content/lib/angular/angular.min.js"></script>
-    <script src="/Content/js/common.js"></script>
-    <script>
-        var iWork = angular.module('iWork',[]);
-    </script>
+    <!-- Angular Third-party Libraries -->
+    <script src="/Content/lib/angular/angular-messages.js"></script>
+    <script src="/Content/lib/angular/angular-resource.js"></script>
+    <script src="/Content/lib/angular/angular-animate.js"></script>
+    <script src="/Content/lib/angular/angular-ui-router.js"></script>
+    <script src="/Content/lib/angular/angular-strap.js"></script>
+    <script src="/Content/lib/angular/angular-strap.tpl.js"></script>
+    <!-- Authentication Plugin -->
+    <script src="//cdn.jsdelivr.net/satellizer/0.9.2/satellizer.min.js"></script>
+    <!-- Init App and confgi -->
+    <script src="/Content/js/login.js"></script>
+    <!-- Angular Directives -->
+    <script src="/Content/js/directives/passwordMatch.js"></script>
+    <script src="/Content/js/directives/passwordStrength.js"></script>
+    <!-- Angular Controllers -->
+    <script src="/Content/js/controllers/login.js"></script>
+    <script src="/Content/js/controllers/logout.js"></script>
+    <script src="/Content/js/controllers/signup.js"></script>
+    <script src="/Content/js/controllers/navbar.js"></script>
+    <script src="/Content/js/controllers/profile.js"></script>
+    <!-- Angular Services -->
+    <script src="/Content/js/services/account.js"></script>
 </head>
 <body>
-    <div class="page-container">
+    <div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#/"><i class="ion-ios7-pulse-strong"></i> iWork</a>
+        </div>
+        <ul class="nav navbar-nav">
+            <li><a href="#/">Home</a></li>
+            <li ng-if="isAuthenticated()"><a href="/#/profile">Profile</a></li>
+        </ul>
+        <ul ng-if="!isAuthenticated()" class="nav navbar-nav pull-right">
+            <li><a href="#/login">Login</a></li>
+            <li><a href="#/signup">Sign up</a></li>
+        </ul>
+        <ul ng-if="isAuthenticated()" class="nav navbar-nav pull-right">
+            <li><a href="#/logout">Logout</a></li>
+        </ul>
+    </div>
+    <div ui-view class="fadeZoom"></div>
+    <!--<div class="page-container">
         <div class="container main-content">
             <content></content>
         </div>
-    </div>
+    </div>-->
 </body>
 </html>
