--- a/iWork.Web.UI/Template/Default/Controls/validation/validation.html
+++ b/iWork.Web.UI/Template/Default/Controls/validation/validation.html
@@ -1,5 +1,5 @@
 ﻿<control>
-    <span class="validation-message" ng-show="submitted && $iv-form-name.$iv-name.$invalid">
+    <span class="validation-message" ng-show="$iv-form-name.$iv-name.$dirty && $iv-form-name.$iv-name.$invalid">
         <span ng-show="$iv-form-name.$iv-name.$error.required">'$iv-label' is required.</span>
         <span ng-show="$iv-form-name.$iv-name.$error.maxlength">'$iv-label' is too long.</span>
         <span ng-show="$iv-form-name.$iv-name.$error.minlength">'$iv-label' is too short.</span>
