--- a/iWork.Web.UI/Template/Default/Controls/button/delete.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/delete.html
@@ -1,10 +1,7 @@
-﻿<control iv-action="Remove"
-         iv-model=""
+﻿<control iv-model=""
          iv-entity-id=""
          iv-placement="left">
     <a class="remove-entity glyphicon glyphicon-trash"
-       data-toggle="confirmation"
-       data-original-title=""
        data-entity-id="$iv-entity-id"
        data-placement="$iv-placement"
        data-model="$iv-model"
