--- a/iWork.Web.UI/Template/Default/Controls/button/iconic.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/iconic.html
@@ -1,5 +1,6 @@
-﻿<control iv-label="" iv-icon="">
-
+﻿<control iv-label="" 
+         iv-icon="" 
+         iv-href="">
     <a href="$iv-href"
        class="btn btn-iconic ">
         <icon iv-type="svg" iv-icon="$iv-icon"></icon>
