--- a/iWork.Web.UI/Template/Default/Controls/button/update.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/update.html
@@ -1,3 +1,5 @@
-﻿<control iv-action="Update" iv-model="" iv-entity-id="" >
+﻿<control iv-href="" 
+         iv-entity-id="">
     <a class="update-entity glyphicon glyphicon-pencil"
-       href="$iv-href/$iv-entity-id"></a></control>
+       href="$iv-href/$iv-entity-id"></a>
+</control>
