--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checkbox.html
@@ -1,6 +1,7 @@
 ﻿<control iv-label=""
          iv-checked="false"
          iv-required="false" 
+         iv-name=""
          >
     <div class="form-group">
         <div class="col-lg-2 checkbox-label-column"></div>
