--- a/iWork.Web.UI/Template/Default/Controls/checkbox/checklist.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/checklist.html
@@ -1,4 +1,4 @@
-﻿<control iv-label="" iv-required="false" iv-minlength="" iv-maxlength="" iv-pattern="" iv-change="">
+﻿<control iv-label="" >
     <div class="form-group checklist">
         <label class="col-lg-2 control-label">$iv-label</label>
         <div class="col-lg-10">
