--- a/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
+++ b/iWork.Web.UI/Template/Default/Controls/checkbox/switch.html
@@ -1,27 +1,18 @@
-﻿<control iv-label="text"
-         iv-required="false">
+﻿<control iv-label=""
+         iv-name=""
+         iv-required="false"
+         iv-size="mini">
     <div class="form-group">
-       <div class="col-lg-2 checkbox-label-column"></div>
+        <div class="col-lg-2 checkbox-label-column"></div>
         <div class="col-lg-10 checkbox-input-column">
-             <!--<input id="$iv-name" 
-                   name="$iv-name" 
-                ng-model="$iv-model.$iv-name"
-                   class="bootstrap-switch" 
-                   type="checkbox" 
-                   ng-checked=" $iv-checked"
-                   ng-required="$iv-required"
-                    />-->
-
             <input bs-switch
+                   type="checkbox"
                    ng-model="$iv-model.$iv-name"
                    name="$iv-name"
-                   type="checkbox"
                    ng-required="$iv-required"
-                   switch-size="mini">
-
-
-            <label for="$iv-name" class="control-label ">
-                    $iv-label
+                   switch-size="$iv-size">
+            <label for="$iv-name" class="control-label">
+                $iv-label
             </label>
             <validation iv-type="validation"></validation>
         </div>
