--- a/iWork.Web.UI/Template/Default/Controls/input/spinner.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/spinner.html
@@ -1,4 +1,6 @@
-﻿<control iv-input-type="text"
+﻿<control iv-label=""
+         iv-name=""
+         iv-input-type="text"
          iv-required="false"
          iv-min=""
          iv-max=""
@@ -16,9 +18,7 @@
                    step="$iv-step"
                    min="$iv-min"
                    max="$iv-max" />
-
             <validation iv-type="validation"></validation>
-
         </div>
     </div>
 </control>
