--- a/iWork.Web.UI/Template/Default/Controls/panel/image.html
+++ b/iWork.Web.UI/Template/Default/Controls/panel/image.html
@@ -1,5 +1,6 @@
-﻿<control>
-    <div class="panel-image" style="width:$iv-widthpx" >
+﻿<control iv-width=""
+         iv-image="">
+    <div class="panel-image" style="width:$iv-widthpx">
         <div class="panel-image-heading">
             <img src="/Content/img/$iv-image" />
         </div>
