--- a/iWork.Web.UI/Template/Default/Controls/panel/panel.html
+++ b/iWork.Web.UI/Template/Default/Controls/panel/panel.html
@@ -1,5 +1,5 @@
-﻿<control>
-    <div class="panel panel-$iv-viewtype">
+﻿<control iv-view-type="">
+    <div class="panel panel-$iv-view-type">
         <div class="panel-heading">
             <iv-header></iv-header>
         </div>
