--- a/iWork.Web.UI/Template/Default/Controls/radio/radiolist.html
+++ b/iWork.Web.UI/Template/Default/Controls/radio/radiolist.html
@@ -1,6 +1,6 @@
-﻿<control iv-required="false" iv-label="Radio List" >
+﻿<control iv-label="Radio List" >
     <div class="form-group radio-list">
-        <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
+        <label class="control-label col-md-2 col-sm-3">$iv-label</label>
         <div class="col-md-10 col-sm-9">
             <iv-content></iv-content>
         </div>
