--- a/iWork.Web.UI/Template/Default/Controls/select/select.html
+++ b/iWork.Web.UI/Template/Default/Controls/select/select.html
@@ -1,11 +1,11 @@
-﻿<control iv-label="" 
+﻿<control iv-label=""
          iv-name=""
-         iv-required="" >
+         iv-required="">
     <div class="form-group">
-        <label for="$iv-name" class="col-lg-2 control-label">$iv-label</label>
+        <label for="$iv-name-select" class="col-lg-2 control-label">$iv-label</label>
         <div class="col-lg-10">
             <select class="form-control"
-                    id="$iv-name"
+                    id="$iv-name-select"
                     name="$iv-name"
                     ng-model="$iv-model.$iv-name"
                     ng-required="$iv-required">
