--- a/iWork.Web.UI/Template/Default/Controls/view/spacer.html
+++ b/iWork.Web.UI/Template/Default/Controls/view/spacer.html
@@ -1,4 +1,5 @@
-﻿<control iv-width="100%" iv-height="10px">
+﻿<control iv-width="100%" 
+         iv-height="10px">
     <div class="spacer" style="width:$iv-width;height:$iv-height;">
     </div>
 </control>
