--- a/iWork.Web.UI/Template/Default/Controls/button/submit.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/submit.html
@@ -1,3 +1,3 @@
-﻿<control>
+﻿<control iv-label="" >
     <button type="submit" class="btn btn-primary" ng-click="formsubmit()">$iv-label</button>
 </control>
