--- a/iWork.Web.UI/Template/Default/Controls/icon/svg.html
+++ b/iWork.Web.UI/Template/Default/Controls/icon/svg.html
@@ -1,3 +1,3 @@
 ﻿<control iv-icon="">
-    <img class="icon-element svg svg-inject" src="/Content/img/$iv-icon.svg" />
+    <img svg-inject class="icon-element svg svg-inject" src="/Content/img/$iv-icon.svg" />
 </control>
