--- a/iWork.Web.UI/Template/Default/Controls/input/password.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password.html
@@ -1,4 +1,5 @@
 ﻿<control iv-label=""
+         iv-name=""
          iv-required="false"
          iv-minlength=""
          iv-maxlength=""
@@ -15,14 +16,9 @@
                    ng-model="$iv-model.$iv-name"
                    ng-required="$iv-required"
                    ng-minlength="$iv-minlength"
-                   ng-maxlength="$iv-maxlength"
-
-                    />
-
-            <div ng-password-strength="user.password" strength="passStrength"></div>
-
+                   ng-maxlength="$iv-maxlength" />
+            <div ng-password-strength="$iv-model.$iv-name" strength="passStrength"></div>
             <validation iv-type="validation"></validation>
-
         </div>
     </div>
 </control>
