--- a/iWork.Web.UI/Template/Default/Controls/input/text.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/text.html
@@ -1,9 +1,9 @@
 ﻿<control iv-label=""
+         iv-name=""
          iv-required="false"
          iv-minlength=""
          iv-maxlength=""
          iv-pattern="">
-
     <div class="form-group">
         <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
         <div class="col-md-10 col-sm-9">
@@ -18,7 +18,6 @@
                    ng-pattern="$iv-pattern"
                    ng-maxlength="$iv-maxlength" />
             <validation iv-type="validation" ></validation>
-            <!--<include iv-source="/iview/kitchensink/validation-message.html"></include>-->
         </div>
     </div>
 </control>
