--- a/iWork.Web.UI/Template/Default/Controls/modal/modal.html
+++ b/iWork.Web.UI/Template/Default/Controls/modal/modal.html
@@ -1,4 +1,5 @@
-﻿<control iv-modal-id="null" iv-form-modal="false">
+﻿<control iv-modal-id="null" 
+         iv-form-modal="false">
     <div id="$iv-modal-id" class="modal fade">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -8,17 +9,4 @@
             </div>
         </div>
     </div>
-    <script>
-        //$('#$iv-modal-id').appendTo('body');
-        //if ($iv-form-modal !== false) {
-        //    $('#$iv-modal-id').on('show.bs.modal', function (event) {
-        //        var button = $(event.relatedTarget)
-        //        var recipient = button.data('entity-id')
-        //        if ('$iv-form-modal' !== 'false' && recipient) {
-        //            var formController = $(this).find('.modal-body [ng-controller]')
-        //            angular.element(formController[0]).scope().formUpdate(recipient);
-        //        }
-        //    });
-        //}
-    </script>
 </control>
