Remove null title

--- a/iWork.Web.UI/Template/Default/Controls/grid/table.html
+++ b/iWork.Web.UI/Template/Default/Controls/grid/table.html
@@ -1,4 +1,4 @@
-﻿<control iv-title="null" 
+﻿<control iv-title="" 
          iv-observe="false" 
          iv-url="false" 
          iv-action="false">
