--- a/iWork.Web.UI/Template/Default/Controls/formfield/help-message.html
+++ b/iWork.Web.UI/Template/Default/Controls/formfield/help-message.html
@@ -1,7 +1,9 @@
 ﻿<control>
     <div class="col-lg-2" >
     </div>
-    <div class="col-lg-10 form-help-message">
-        <iv-content></iv-content>
+    <div class="col-lg-10 ">
+        <div class="form-help-message">
+            <iv-content></iv-content>
+        </div>
     </div>
 </control>
