--- a/iWork.Web.UI/Content/css/control.css
+++ b/iWork.Web.UI/Content/css/control.css
@@ -147,7 +147,8 @@
   -webkit-border-radius: 0px;
   -moz-border-radius: 0px;
   -ms-border-radius: 0px;
-  border-radius: 0px; }
+  border-radius: 0px;
+  text-align: left !important; }
 
 .form-horizontal .form-group textarea:focus, .form-horizontal .form-group select:focus, .form-horizontal .form-group input:focus {
   border-bottom: 1px solid #286090; }
@@ -190,13 +191,18 @@
 
 /* Form Validation
 ========================================*/
+.form-horizontal input.ng-invalid.ng-pristine:focus, .form-horizontal input.ng-invalid.ng-pristine {
+  border-bottom: 1px solid #eeeeee !important;
+  background: none !important; }
+
 .form-horizontal input.ng-invalid.ng-dirty:focus, .form-horizontal input.ng-invalid.ng-dirty {
-  border-bottom: 1px solid #F43E00 !important; }
+  border-bottom: 1px solid #F43E00 !important;
+  background: #fff7f4 !important; }
 
 .form-horizontal .validation-message {
   color: red;
   width: 100%; }
-  .form-horizontal .validation-message span {
+  .form-horizontal .validation-message div {
     display: block;
     width: 100%;
     font-size: 11px;
