--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -172,6 +172,7 @@
     -webkit-box-shadow: none;
     color: #333333 !important;
     @include border-radius(0px);
+    text-align:left !important;
 }
 
 .form-horizontal .form-group textarea:focus,
@@ -227,29 +228,36 @@
 
 /* Form Validation
 ========================================*/
+.form-horizontal input.ng-invalid.ng-pristine:focus,
+.form-horizontal input.ng-invalid.ng-pristine {
+    border-bottom: 1px solid #eeeeee !important;
+    background: none !important;
+}
+
 .form-horizontal input.ng-invalid.ng-dirty:focus,
 .form-horizontal input.ng-invalid.ng-dirty {
     border-bottom: 1px solid #F43E00 !important;
+    background: lighten(#F43E00,50%) !important;
 }
+
 
 .form-horizontal .validation-message {
     color: red;
     width: 100%;
 
-    span {
+    div {
         display: block;
         width: 100%;
         font-size: 11px;
-        text-indent:10px;
+        text-indent: 10px;
     }
 }
 
+//.error-messages.ng-active:after
 /*::-webkit-validation-bubble {border:1px solid red !important;}
 ::-webkit-validation-bubble-arrow-clipper {border:1px solid red !important;}
 ::-webkit-validation-bubble-arrow {border:1px solid red !important;}
 ::-webkit-validation-bubble-message {border:1px solid red !important;}*/
-
-
 .form-help-message {
     font-size: 12px;
     margin-bottom: 10px;
@@ -258,12 +266,10 @@
 }
 
 .form-horizontal {
-   
     textarea:invalid,
     input:invalid {
-        outline:none;
+        outline: none;
     }
-
 }
 
 /* Checklist
@@ -343,13 +349,13 @@
 ==================================*/
 
 .btn-iconic {
-    display:block;
-    width:100%;
-    float:right;
+    display: block;
+    width: 100%;
+    float: right;
     background-color: #eeeeee;
     outline: none;
-    text-align:center;
-    margin-top:5px;
+    text-align: center;
+    margin-top: 5px;
 }
 
 .btn-iconic:focus,
@@ -358,8 +364,8 @@
 }
 
 .btn-iconic span {
-    display:block;
-    width:100%;
+    display: block;
+    width: 100%;
     float: left;
     height: 28px;
     line-height: 28px;
