--- a/iWork.Web.UI/Content/css/style.scss
+++ b/iWork.Web.UI/Content/css/style.scss
@@ -8,16 +8,24 @@
     transition: all 400ms ease;
 }
 
-table *{
-     -webkit-transition:none;
+.validation-message {
+    -webkit-transition: all 0ms ease;
+    -moz-transition: all 0ms ease;
+    -ms-transition: all 0ms ease;
+    -o-transition: all 0ms ease;
+    transition: all 0ms ease;
+}
+
+table * {
+    -webkit-transition: none;
     -moz-transition: none;
-    -ms-transition:none;
+    -ms-transition: none;
     -o-transition: none;
     transition: none;
 }
 
 .navbar {
-      -webkit-transition: none;
+    -webkit-transition: none;
     -moz-transition: none;
     -ms-transition: none;
     -o-transition: none;
@@ -266,26 +274,26 @@ body {
 
 
 body,
-html{
-    overflow:hidden !important;
+html {
+    overflow: hidden !important;
 }
 
-.main-content{
-    overflow-x:hidden;
-    overflow-y:visible;
-    display:block;
-    float:right;
-    height:auto;
-    min-height:10px !important;
+.main-content {
+    overflow-x: hidden;
+    overflow-y: visible;
+    display: block;
+    float: right;
+    height: auto;
+    min-height: 10px !important;
 }
-.page-content{
-    display:block;
-    width:100%;
-    float:right;
-    background-color:#ffffff;
-    padding:10px 10px 30px 10px !important;
-    min-height:100%;
-    
+
+.page-content {
+    display: block;
+    width: 100%;
+    float: right;
+    background-color: #ffffff;
+    padding: 10px 10px 30px 10px !important;
+    min-height: 100%;
 }
 
 .slide {
@@ -295,26 +303,34 @@ html{
     width: 100%;
     height: 100%;
 }
+
 .slide.ng-enter,
 .slide.ng-leave {
     -webkit-transition: all 500ms ease;
-    -moz-transition:all 500ms ease;
+    -moz-transition: all 500ms ease;
     -o-transition: all 500ms ease;
     transition: all 500ms ease;
 }
+
 .slide.ng-enter {
     left: 100%;
-    opacity:0;
+    opacity: 0;
 }
+
 .slide.ng-enter-active {
     left: 0;
-    opacity:1;
+    opacity: 1;
 }
+
 .slide.ng-leave {
     left: 0;
-    opacity:1;
+    opacity: 1;
 }
+
 .slide.ng-leave-active {
     left: -100%;
 }
 
+.btn {
+    @include border-radius(0);
+}
