--- a/iWork.Web.UI/Template/Default/Controls/input/text.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/text.html
@@ -3,7 +3,10 @@
          iv-required="false"
          iv-minlength=""
          iv-maxlength=""
-         iv-pattern="">
+         iv-pattern=""
+         iv-mask=""
+         iv-custom-validator="custom-validation"
+         iv-custom-validator-data="data.password">
     <div class="form-group">
         <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
         <div class="col-md-10 col-sm-9">
@@ -16,8 +19,10 @@
                    ng-required="$iv-required"
                    ng-minlength="$iv-minlength"
                    ng-pattern="$iv-pattern"
-                   ng-maxlength="$iv-maxlength" />
-            <validation iv-type="validation" ></validation>
+                   input-mask="'$iv-mask'"
+                   ng-maxlength="$iv-maxlength"
+                   $iv-custom-validator="$iv-custom-validator-data" />
+            <validation iv-type="validation"></validation>
         </div>
     </div>
 </control>
