--- a/iWork.Web.UI/Template/Default/Controls/input/textarea.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/textarea.html
@@ -4,6 +4,7 @@
          iv-required="false"
          iv-minlength=""
          iv-maxlength=""
+         iv-mask=""
          iv-pattern="">
     <div class="form-group">
         <label for="$iv-name" class="control-label col-md-2 col-sm-3">$iv-label</label>
@@ -16,6 +17,7 @@
                       ng-required="$iv-required"
                       ng-minlength="$iv-minlength"
                       ng-maxlength="$iv-maxlength"
+                      input-mask="'$iv-mask'"
                       ng-pattern="$iv-pattern" />
             <validation iv-type="validation"></validation>
         </div>
