--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -26,12 +26,15 @@
     <script src="/Content/lib/angular/angular.min.js"></script>
     <script src="/Content/lib/angular/angular-route.js"></script>
     <script src="/Content/lib/angular/angular-animate.js"></script>
-   
+    <script src="/Content/lib/angular/angular-messages.js"></script>
+    <script src="/Content/lib/jquery-inputmask/jquery.inputmask.bundle.js"></script>
+
+    <script src="/Content/lib/angular-strap/angular-strap.js"></script>
+    <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
 
     <script src="/Content/lib/angular/angular-bootstrap-switch.js"></script>
     <script src="/Content/lib/angular/ng-password-strength.min.js"></script>
-    <script src="/Content/lib/angular-strap/angular-strap.js"></script>
-    <script src="/Content/lib/angular-strap/angular-strap.tpl.js"></script>
+  
     <script src="/Content/lib/bootstrap-switch/js/bootstrap-switch.js"></script>
     <script src="/Content/lib/magicsugges/magicsuggest.js"></script>
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
