--- a/iWork.Web.UI/Content/css/control.scss
+++ b/iWork.Web.UI/Content/css/control.scss
@@ -172,7 +172,7 @@
     -webkit-box-shadow: none;
     color: #333333 !important;
     @include border-radius(0px);
-    text-align:left !important;
+    text-align: left !important;
 }
 
 .form-horizontal .form-group textarea:focus,
@@ -228,13 +228,12 @@
 
 /* Form Validation
 ========================================*/
-.form-horizontal input.ng-invalid.ng-pristine:focus,
-.form-horizontal input.ng-invalid.ng-pristine {
-    border-bottom: 1px solid #eeeeee !important;
-    background: none !important;
-}
 
-.form-horizontal input.ng-invalid.ng-dirty:focus,
+.form-horizontal select.ng-invalid:focus,
+.form-horizontal textarea.ng-invalid:focus,
+.form-horizontal input.ng-invalid:focus,
+.form-horizontal select.ng-invalid.ng-dirty,
+.form-horizontal textarea.ng-invalid.ng-dirty,
 .form-horizontal input.ng-invalid.ng-dirty {
     border-bottom: 1px solid #F43E00 !important;
     background: lighten(#F43E00,50%) !important;
