--- a/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
+++ b/iWork.Web.UI/Template/Default/Controls/input/password-confirm.html
@@ -3,6 +3,7 @@
          iv-required="false"
          iv-minlength=""
          iv-maxlength=""
+         iv-match=""
          iv-pattern="">
 
     <div class="form-group">
@@ -16,9 +17,17 @@
                    ng-model="$iv-model.$iv-name"
                    ng-required="$iv-required"
                    ng-minlength="$iv-minlength"
-                   password-validate=""
+                   data-match="$iv-model.$iv-match"
                    ng-maxlength="$iv-maxlength" />
-            <validation iv-type="validation"></validation>
+            <validation iv-type="validation">
+                <div ng-message="match" error>
+                    Password Dos not match!
+                </div>
+                <div ng-message="pwd" error>
+                    Password strength!
+                </div>
+
+            </validation>
         </div>
     </div>
 </control>
