Fix validation control

--- a/iWork.Web.UI/Template/Default/Controls/validation/validation.html
+++ b/iWork.Web.UI/Template/Default/Controls/validation/validation.html
@@ -26,6 +26,7 @@
         <div ng-message="number" error>
             '$iv-label' is not a valid number.
         </div>
+        <iv-content></iv-content>
         <!--<div ng-message="customValidation">Checking database...</div>-->
     </div>
 </control>
