Cleanup and deploy the sitemap

--- a/iWork.Web.UI/Template/Default/Controls/button/iconic.html
+++ b/iWork.Web.UI/Template/Default/Controls/button/iconic.html
@@ -1,7 +1,8 @@
-﻿<control iv-label="" 
-         iv-icon="" 
+﻿<control iv-label=""
+         iv-icon=""
          iv-href="">
-    <a href="$iv-href"
+    <a viewname="$iv-viewname"
+       view-link
        class="btn btn-iconic ">
         <icon iv-type="svg" iv-icon="$iv-icon"></icon>
         <span>$iv-label</span>
