--- a/iWork.Web.UI/Template/Default/Controls/radio/radio.html
+++ b/iWork.Web.UI/Template/Default/Controls/radio/radio.html
@@ -2,11 +2,11 @@
          iv-name="" 
          iv-checked="false">
 
-    <label for="$iv-name-radio" class="control-label">
+    <label for="$iv-label$iv-name-radio" class="control-label">
         <input type="radio"
                class="form-control"
                name="$iv-name"
-               id="$iv-name-radio"
+               id="$iv-label$iv-name-radio"
                ng-model="$iv-model.$iv-name"
                ng-checked="$iv-checked" />
         <span>
