--- a/iWork.Web.UI/Template/Default/Controls/view/partial.html
+++ b/iWork.Web.UI/Template/Default/Controls/view/partial.html
@@ -1,6 +1,6 @@
 ﻿<control>
     <script>
-        sitemapDefinition.push({
+        sitemap.push({
             viewname: "$iv-name",
             href: "$iv-href"
         });
