--- a/iWork.Web.UI/Template/Default/Layout/login.html
+++ b/iWork.Web.UI/Template/Default/Layout/login.html
@@ -22,7 +22,7 @@
     <!-- Authentication Plugin -->
     <script src="//cdn.jsdelivr.net/satellizer/0.9.2/satellizer.min.js"></script>
     <!-- Init App and confgi -->
-    <script src="/Content/js/login.js"></script>
+    <script src="/Content/js/login-app.js"></script>
     <!-- Angular Directives -->
     <script src="/Content/js/directives/passwordMatch.js"></script>
     <script src="/Content/js/directives/passwordStrength.js"></script>
