--- a/iWork.Web.UI/Template/Default/Layout/Default.html
+++ b/iWork.Web.UI/Template/Default/Layout/Default.html
@@ -18,8 +18,6 @@
 
     <script src="/Content/lib/bootstrap-lib/bootstrap-confirmation.js"></script>
 
-
-
     <script src="/Content/lib/moment.js"></script>
     <script src="/Content/lib/datatables/js/jquery.dataTables.js"></script>
     <script src="/Content/lib/datatables/js/dataTables.bootstrap.js"></script>
@@ -40,31 +38,12 @@
     <script src="/Content/lib/jquery.svginject.js" type="text/javascript"></script>
     <script src="/Content/lib/dropzone/dropzone.js" type="text/javascript"></script>
 
-    <script src="/Content/js/page.js" type="text/javascript"></script>
+    <script src="/Content/js/app.js" type="text/javascript"></script>
     <script src="/Content/js/common.js"></script>
-    <script src="/Content/js/directives.js"></script>
-    <script>
-        var sitemapDefinition = [];
-        // TODO: remove this script and movbe to angulkar directive
-        $(document).ready(function () {
-            $('a[viewname]').each(function () {
-                var $link = $(this);
-                var thisViewname = $link.attr('viewname');
-                $.each(sitemapDefinition, function (index, item) {
-                    if (thisViewname == item.viewname) {
-                        $link.attr({
-                            href: '#' + item.href
-                        });
-                    }
-                });
-            });
-        });
-    </script>
+    <script src="/Content/js/controllers/submenu.js"></script>
+    <script src="/Content/js/directives/directives.js"></script>
 </head>
 <body>
-
-    <view iv-type="contentdef" iv-href="/contact/form" iv-name="contactform"></view>
-    <view iv-type="contentdef" iv-href="/contact/grid" iv-name="contactgrid"></view>
     <nav class="navbar navbar-default navbar-fixed-top">
         <div class="navbar-header col-md-1 col-xs-9">
             <a class="navbar-brand" href="#">iWork</a>
@@ -79,7 +58,7 @@
         </div>
         <div class="navbar-right col-md-1 col-xs-3">
             <div class="member-territory pull-right flip">
-                <img class="svg-inject" src="/Content/img/user.svg" />
+                <img svg-inject class="svg-inject" src="/Content/img/user.svg" />
             </div>
         </div>
         <div class="bottom-inner-shadow"></div>
